--- a/src/ray/core_worker/BUILD.bazel
+++ b/src/ray/core_worker/BUILD.bazel
@@ -79,7 +79,7 @@ ray_cc_library(
         "//src/ray/protobuf:core_worker_cc_grpc",
         "//src/ray/protobuf:core_worker_cc_proto",
         "//src/ray/rpc:grpc_server",
-        "//src/ray/rpc:server_call",
+        "//src/ray/rpc:rpc_callback_types",
     ],
 )
 
@@ -161,6 +161,7 @@ ray_cc_library(
     visibility = [":__subpackages__"],
     deps = [
         "//src/ray/gcs_client",
+        "//src/ray/util:thread_utils",
     ],
 )
 
@@ -263,6 +264,7 @@ ray_cc_library(
         "//src/ray/common:status",
         "//src/ray/ipc:raylet_ipc_client_interface",
         "//src/ray/rpc:utils",
+        "//src/ray/stats:stats_metric",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
         "@com_google_absl//absl/synchronization",
@@ -342,6 +344,7 @@ ray_cc_library(
     hdrs = ["experimental_mutable_object_provider.h"],
     deps = [
         ":experimental_mutable_object_manager",
+        "//src/ray/common:asio",
         "//src/ray/rpc:client_call",
         "//src/ray/rpc:raylet_client_interface",
     ],
