add gen_redis_pkg bazel target (#56527)
<!-- Thank you for your contribution! Please review
https://github.com/ray-project/ray/blob/master/CONTRIBUTING.rst before
opening a pull request. -->

<!-- Please add a reviewer to the assignee section when you create a PR.
If you don't have the access to it, we will shortly find a reviewer and
assign them to your PR. -->

## Why are these changes needed?

Separate building ray and building redis-cli, redis-server. The latter
two are only needed for tests, in
`src/ray/gcs/gcs_client/tests/BUILD.bazel` and
`src/ray/gcs/store_client/tests/BUILD.bazel`. Replaces #55731. Follow on
for #55975, #56036 which provide binary versions of redis components
rather than building from source. Once complete, conda-forge can use
this to avoid building redis.

<!-- Please give a short summary of the change and the problem this
solves. -->

## Related issue number

<!-- For example: "Closes #1234" -->

## Checks

- [x] I've signed off every commit(by using the -s flag, i.e., `git
commit -s`) in this PR.
- [ ] I've run `scripts/format.sh` to lint the changes in this PR.
- [ ] I've included any doc changes needed for
https://docs.ray.io/en/master/.
- [ ] I've added any new APIs to the API Reference. For example, if I
added a
method in Tune, I've added it in `doc/source/tune/api/` under the
           corresponding `.rst` file.
- [ ] I've made sure the tests are passing. Note that there might be a
few flaky tests, see the recent failures at https://flakey-tests.ray.io/
- Testing Strategy
   - [ ] Unit tests
   - [ ] Release tests
   - [ ] This PR is not tested :(

---------

Signed-off-by: mattip <matti.picus@gmail.com>
Co-authored-by: Lonnie Liu <95255098+aslonnie@users.noreply.github.com>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -394,7 +394,6 @@ pkg_zip(
         ":gcs_server_files",
         ":raylet_files",
         ":raylet_so_files",
-        ":redis_files",
     ] + select({
         ":jemalloc": [":jemalloc_files"],
         "//conditions:default": [],
@@ -481,6 +480,26 @@ genrule(
         echo "$${PWD}" > $@
     """,
     local = 1,
+)
+
+pkg_zip(
+    name = "ray_redis_zip",
+    srcs = [
+        ":redis_files",
+    ],
+    out = "ray_redis.zip",
+)
+
+py_binary(
+    name = "gen_redis_pkg",
+    srcs = ["gen_redis_pkg.py"],
+    data = [
+        ":ray_redis_zip",
+    ],
+    visibility = ["//visibility:private"],
+    deps = [
+        "//bazel:gen_extract",
+    ],
 )
 
 py_binary(
