--- a/python/ray/tune/BUILD.bazel
+++ b/python/ray/tune/BUILD.bazel
@@ -881,7 +881,8 @@ py_test(
     name = "lightgbm_example",
     size = "small",
     srcs = ["examples/lightgbm_example.py"],
-    env = {"RAY_TRAIN_V2_ENABLED": "1"},
+    # TODO: Enable after fixing lightgbm Tune callback.
+    env = {"RAY_TRAIN_V2_ENABLED": "0"},
     tags = [
         "example",
         "exclusive",
@@ -895,7 +896,8 @@ py_test(
     size = "small",
     srcs = ["examples/lightgbm_example.py"],
     args = ["--use-cv"],
-    env = {"RAY_TRAIN_V2_ENABLED": "1"},
+    # TODO: Enable after fixing lightgbm Tune callback.
+    env = {"RAY_TRAIN_V2_ENABLED": "0"},
     main = "examples/lightgbm_example.py",
     tags = [
         "example",
@@ -1234,7 +1236,8 @@ py_test(
     size = "medium",
     srcs = ["examples/tune_mnist_keras.py"],
     args = ["--smoke-test"],
-    env = {"RAY_TRAIN_V2_ENABLED": "1"},
+    # TODO: Uncomment after fixing Tune keras callback.
+    env = {"RAY_TRAIN_V2_ENABLED": "0"},
     tags = [
         "example",
         "exclusive",
