removing default flag
Signed-off-by: elliot-barn <elliot.barnwell@anyscale.com>

--- a/ci/raydepsets/llmexamples.depsets.yaml
+++ b/ci/raydepsets/llmexamples.depsets.yaml
@@ -31,40 +31,10 @@ depsets:
     source_depset: e2e_timeseries_compiled_depset_${PYTHON_SHORT}
     requirements:
       - doc/source/ray-overview/examples/e2e-timeseries/requirements.txt
-    output: release/ray_release/byod/e2e_timeseries_py311_cu123.lock
+    output: release/ray_release/byod/e2e_timeseries_py311_cu124.lock
     operation: expand
     append_flags:
       - --python-version=${PYTHON_VERSION}
+      - --extra-index-url https://download.pytorch.org/whl/cu124
     build_arg_sets:
       - py311
-
-# build_arg_sets:
-#   py311:
-#     PYTHON_VERSION: "3.11"
-#     PYTHON_SHORT: "311"
-
-
-# depsets:
-#   - name: e2e_timeseries_depset_${PYTHON_SHORT}
-#     requirements:
-#       - python/deplocks/ray_img/ray_img_py311.lock
-#     constraints:
-#       - doc/source/ray-overview/examples/e2e-timeseries/requirements.txt
-#     operation: compile
-#     output: release/ray_release/byod/e2e_timeseries_py311_cu123.lock
-#     append_flags:
-#       - --python-version=${PYTHON_VERSION}
-#     build_arg_sets:
-#       - py311
-
-  # - name: e2e_timeseries_depset_${PYTHON_SHORT}
-  #   depsets:
-  #     - e2e_timeseries_depset_${PYTHON_SHORT}
-  #   requirements:
-  #     - doc/source/ray-overview/examples/e2e-timeseries/requirements.txt
-  #   operation: expand
-  #   output: release/ray_release/byod/e2e_timeseries_py311_cu123.lock
-  #   append_flags:
-  #     - --python-version=${PYTHON_VERSION}
-  #   build_arg_sets:
-  #     - py311
