adding hello world emoji test
Signed-off-by: elliot-barn <elliot.barnwell@anyscale.com>

--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -96,6 +96,26 @@
   variations:
     - __suffix__: aws
 
+- name: hello_world_custom_byod
+  team: reef
+  group: hello_world_custom_byod
+  frequency: nightly
+  working_dir: hello_world_tests
+
+  cluster:
+    byod:
+      type: llm-cu128
+      post_build_script: byod_hello_world.sh
+      python_depset: emoji.lock
+    cluster_compute: ci/aws.yaml
+
+  run:
+    timeout: 1800
+    script: python hello_world_emoji.py
+
+  variations:
+    - __suffix__: aws
+
 #######################
 # Cluster scaling tests
 #######################
