--- a/release/BUILD.bazel
+++ b/release/BUILD.bazel
@@ -476,6 +476,26 @@ py_test(
 )
 
 py_test(
+    name = "test_custom_image_build_and_test_init",
+    size = "small",
+    srcs = ["ray_release/tests/test_custom_image_build_and_test_init.py"],
+    data = [
+        "hello_world_tests/hello_world_compute_config.yaml",
+        "ray_release/configs/oss_config.yaml",
+        "ray_release/tests/sample_tests.yaml",
+    ],
+    exec_compatible_with = ["//:hermetic_python"],
+    tags = [
+        "release_unit",
+        "team:ci",
+    ],
+    deps = [
+        ":ray_release",
+        bk_require("pytest"),
+    ],
+)
+
+py_test(
     name = "test_cluster_manager",
     size = "small",
     srcs = ["ray_release/tests/test_cluster_manager.py"],
